# updaterx

./: .dockerignore  .replit  Dockerfile  app.py  config.py  docker-compose.yml  file_handler.py  image_search.py  main.py  message_formatter.py  movie_bot.session  movie_bot.session-journal  nixpacks.toml  pyproject.toml  replit.md  requirements.txt  youtube_fetcher.py
attached_assets/: Pasted--workspace-pip-install-r-requirements-txt-ERROR-Exception-Traceback-most-recent-call-last--1758901794229_1758901794230.txt  Pasted-AAC-1-2GB-ESub-mkv-540p-2h20m31s-Tamil-Telugu-Uploaded--1758902034874_1758902034875.txt  Pasted-ERROR-Exception-Traceback-most-recent-call-last-File-nix-store-yaps09f01jp3fd1405qlr0qz6haf-1758959352982_1758959352984.txt  Pasted-INFO-main-Bot-started-successfully-ERROR-main-Error-loading-existing-data-ObservedDict--1758795186960_1758795186961.txt  Pasted-INFO-main-Final-caption-language-English-Tamil-INFO-main-Extracted-movie-name-Ind-1758904154455_1758904154456.txt  Pasted-INFO-main-Joined-clean-tokens-Veer-INFO-main-Final-movie-name-Veer-INFO-main--1758874275576_1758874275577.txt  Pasted-INFO-main-Updated-qualities-for-Ghaati-HDRip-720p-INFO-main-Updated-languag-1758899595943_1758899595944.txt  Pasted-NFO-telethon-network-mtprotosender-Connecting-to-91-108-56-157-443-TcpFull-INFO-telethon-network-1758901073218_1758901073219.txt  Pasted-Updating-dependencies-Resolving-dependencies-0-6s-Package-operations-0-installs-1-update-0--1758899873203_1758899873204.txt  (+1 more)
templates/: index.html
