[tool.poetry]
name = "telegram-movie-bot"
version = "0.1.0"
description = "Telegram Movie Bot"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "1.24.0"
replit = "3.3.0"
python-dateutil = "2.8.2"
yt-dlp = "^2025.9.23"
pillow = "^11.3.0"
requests = "^2.32.5"
aiohttp = "3.8.6"
brotli = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
